--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -3,10 +3,12 @@
 <head>
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
- 
-  <script type="text/javascript" src="script.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<!-- jQuery library -->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
   <style>
     /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
     .row.content {height: 1500px}
@@ -47,56 +49,23 @@
 	display:inline-block
 	}
 	
+	.circle.active{
+		background-color: FFFF00
+	}
+	
+	
   </style>
 </head>
 <body>
 
 <div class="col-12 align-self-center" id="ElevatorDash">
+	<div class="row" id="elevatorRow">
+	</div>
 
-<div class="card col-3">
-<div class="row">
-<div class="card align-self-left col-8 " style="width: 18rem;" id="1">
-   <p class="card-top align-self-center">Floor</p>
-  <img class="card-img-top" src="./download.jpg" alt="Card image cap">
-  <div class="card-body">
-    <p class="card-text">Current Floor </p>
-	<p class="card-text">Passengers</p>
-  </div>
-  </div>
-  <div class = "container h-100 assign-self-right col-4 ">
-	<div class="row mt-3">
-		<div class="col-6"><div class="circle col-12">1</div></div>
-		<div class="col-6"><span class="circle col-12">2</span></div>
-   </div>
-   <div class="row mt-3">
-		<div class="col-6"><span class="circle col-12">3</span></div>
-		<div class="col-6"><span class="circle col-12">4</span></div>
-   </div>
-   <div class="row mt-3">
-		<div class="col-6"><span class="circle col-12">5</span></div>
-		<div class="col-6"><span class="circle col-12">6</span></div>
-   </div>
-   <div class="row mt-3">
-		<div class="col-6"><span class="circle col-12">7</span></div>
-		<div class="col-6"><span class="circle col-12">8</span></div>
-   </div>
-   <div class="row mt-3">
-		<div class="col-6"><span class="circle col-12">9</span></div>
-		<div class="col-6"><span class="circle col-12">10</span></div>
-   </div>
-   <div class="row mt-3">
-		<div class="col-6"><span class="circle col-12">11</span></div>
-		<div class="col-6"><span class="circle col-12"><p>12</p></span></div>
-   </div>
-  </div>
-</div>
-</div>
 
 
 </div>
-
-
-
-
 </body>
+<script type="text/javascript" src="script.js"></script>
+
 </html>
