Front end looking decent

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -52,6 +52,51 @@
 	.circle.active{
 		background-color: FFFF00
 	}
+  .arrow-up.active {
+  width: 0; 
+  height: 0; 
+  border-left: 60px solid transparent;
+  border-right: 60px solid transparent;
+  
+  border-bottom: 60px solid green;
+}
+
+.currentFloor {
+  font-size: 20px;
+  color: green;
+}
+
+.arrow-down.active {
+  width: 0; 
+  height: 0; 
+  border-left: 40px solid transparent;
+  border-right: 40px solid transparent;
+  border-top: 40px solid green;
+}
+
+.arrow-up {
+  width: 0; 
+  height: 0; 
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  
+  border-bottom: 15px solid grey;
+  display: inline-block;
+  vertical-align: middle;
+  
+}
+
+.arrow-down {
+   width: 0; 
+  height: 0; 
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  
+  border-top: 10px solid grey; 
+  display: inline-block;
+  vertical-align: middle;
+
+}
 	
 	
   </style>
