Added text area and method for updating it on the front end

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -110,6 +110,9 @@
 
 
 </div>
+<textarea cols="80" name="message" class="col-12" id="timingInfo" rows="12" style="font-size:11px;padding:5px;">
+
+</textarea>
 </body>
 <script type="text/javascript" src="script.js"></script>
 
